@@ -1,3 +1,10 @@
+2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac, startup/bspstart.c: Split out
+	bsp_get_work_area() into its own file and user BSP Framework to
+	perform more initialization.
+	* startup/bspgetworkarea.c: New file.
+
 2008-09-05	Ralf Corsepius <ralf.corsepius@rtems.org>
 
 	* timer/timer.c: Use "true" instead of "1" for "bool"s.
